force-app/main/default/objects/TaskActionCondition__c/TaskActionCondition__c.object-meta.xml
<CustomObject>
    <label>Condição da ação da tarefa</label>
    <nameField>
        <displayFormat>TAC-{0000}</displayFormat>
        <label>Nome de Condição da ação da tarefa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condições da ação da tarefa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>