force-app/main/default/objects/TaskActionCondition__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identificador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>