force-app/main/default/objects/TaskActionCondition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
                <label>Igual a</label>
            </value>
            <value>
                <fullName>NOT_EQUALS</fullName>
                <label>Diferente de</label>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
                <label>Menor que</label>
            </value>
            <value>
                <fullName>LESS_OR_EQUAL</fullName>
                <label>Menor ou igual</label>
            </value>
            <value>
                <fullName>GREATER_THAN</fullName>
                <label>Maior que</label>
            </value>
            <value>
                <fullName>GREATER_OR_EQUAL</fullName>
                <label>Maior ou igual</label>
            </value>
            <value>
                <fullName>IS_LIKE</fullName>
                <label>É como</label>
            </value>
            <value>
                <fullName>IS_IN</fullName>
                <label>Contém</label>
            </value>
            <value>
                <fullName>NOT_IN</fullName>
                <label>Não contém</label>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
                <label>Inclui</label>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
                <label>Exclui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>