force-app/main/default/objects/TaskActionCondition__c/fields/TaskAction__c.field-meta.xml
<CustomField>
    <fullName>TaskAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ação da tarefa</label>
    <referenceTo>TaskAction__c</referenceTo>
    <relationshipLabel>Condições da ação da tarefa</relationshipLabel>
    <relationshipName>TaskActionCondition</relationshipName>
    <type>Lookup</type>
</CustomField>