force-app/main/default/objects/TaskActionCondition__c/recordTypes/StoppageCondition.recordType-meta.xml
<RecordType>
    <fullName>StoppageCondition</fullName>
    <active>true</active>
    <label>Condição de parada</label>
</RecordType>